--- a/index.html
+++ b/index.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Ivar's Pesrsonal Site</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Ravi's Personal Website</title>
+    <link rel="favicon" href="favicon.png">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
-<body>
-  <table cellpadding=20>
-    <tr>
-      <td> <img src="ravi.png" alt="Rabi"></td>
-      <td>  <h1>Rabi K.Chhetri</h1><p><em>I am <strong><a href="https://www.facebook.com/profile.php?id=100011977924929">Freelancer</strong></a></em></p>
-        <p>I have expertise in CSS,HTML,Js,Node.js</p></td>
-        <td></td>
-    </tr>
-  </table>
-  <hr size=2 noshade>
-  <h3>Education</h3>
-  <ul>
-    <li>App Developer</li>
-    <li>Website Builders</li>
-  </ul>
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <td>Date</td>
-        <td>Work</td>
-      </tr>
-    </thead>
-<tbody cellspacing=2>
-    <tr>
-      <td>2012-2022</td>
-      <td>Developer</td>
-    </tr>
-    <tr>
-      <td>2012-2018</td>
-      <td>Website Developer</td>
-    </tr>
-  </tbody>
-  </table>
-  <h3>Skill</h3>
-    <table cellpadding=2 cellspacing=2>
-      <tr>
-        <td>Html</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <td>Css</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <td>Java</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-    </table>
-  <hr size=1 noshade>
-<a href="hobbies.html">Hobbies</a>
-<a href="contact.html">Contact Me</a>
-</body>
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="img/cloud.png" alt="cloud">
+      <h1>I'm Ravi.</h1>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
+      <img class="bottom-cloud" src="img/cloud.png" alt="cloud">
+      <img class="mountain" src="img/mountain.png" alt="cloud">
+
+    </div>
+
+    <div class="middle-container">
+      <div class="profile">
+      <img class="ravi"src="img\ravi.png" alt="">
+        <h2>Hello.</h2>
+        <p class="intro">I am an iOS and Web Developer and CEO of Elite Tech Company. I ❤️ coffee and I am a food person.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="computer circular" src="img/computer.png" alt="">
+          <h3>Design & Development</h3>
+          <p class="p1">I started learning to code when I was 12 years old because I wanted to make my own video games.
+            Over time, I have gained a wealth of experience desigging and developing mobikle and web application.</p>
+        </div>
+        <div class="skill-row">
+          <img class="chillies" src="img/chillies.png" alt="">
+          <h3>Hot Wings Challenge</h3>
+          <p class="p2">But my best skill is actually in eating hot wings.I am undisputed queen of hot wiring challenges.Ghost Peppers and Carolina Reapersare my favorite Snacks.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love hot wings as much as I do.</h3>
+        <p class="contact-message">Love hot wings as much I do? let's talk about how awesome they are! We are always heere for you.</p>
+        <a class="btn" href="mailto:unavkc123@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.facebook.com/people/Ravi-K-Chhetri/100011977924929/">Facebook</a>
+      <a class="footer-link" href="https://www.instagram.com/cherish_ivar/">Instagram</a>
+      <a class="footer-link" href="https://twitter.com/RaviKChhetri1">Twitter</a>
+      <p class="copyright">© 2018 Ravi K.Chhetri © Elite Tech Company.</p>
+    </div>
+
+
+  </body>
 </html>
